# 1zad

./: CMakeLists.txt  Factory.hpp  FactoryHori.hpp  FactoryVert.hpp  Vector.cpp  Vector.hpp  VectorHori.cpp  VectorHori.hpp  VectorVert.cpp  VectorVert.hpp  in1.txt  in2.txt  input.txt  main.cpp
